# compliant-agent

./: .gitignore  README.md  commons.py  compliance_agent.py  demo.sh  demo_chat_agent.py  law_faiss_db.py  main.py  modal_example.py  pyproject.toml  random_agent.py  retrieval_qa.py  tests.py
agents/: CompliantAgentExecutor.py  demo_chat_agent.py
docs/: ice-cream.txt  ice_cream.txt  uk-bribery-act.txt  us-fcpa.txt
vectordb/: create_vectorstores.py  retrieval_qa.py
vectorstores/uk-bribery-act-vectorstore/: index.faiss  index.pkl
vectorstores/uk-bribery-act-vs/: index.faiss  index.pkl
vectorstores/us-fcpa-vectorstore/: index.faiss  index.pkl
