[tool.poetry]
name = "compliant-agent"
version = "0.1.0"
description = ""
authors = ["bkitano <briankitano@gmail.com>"]
readme = "README.md"
packages = [{include = "compliant_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.215"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
