[tool.poetry]
name = "compliant-agent"
version = "0.1.0"
description = ""
authors = ["bkitano <briankitano@gmail.com>"]
readme = "README.md"
packages = [{include = "compliant_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.215"
anthropic = "^0.2.10"
openai = "^0.27.8"
modal = "^0.49.2471"
transformers = "^4.30.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
